1.0.3 
* Allow for a longer set of retries if port is in use when the server starts up.

1.0.2 Mon Dec 17 07:24:42 EST 2012
* Add --expceptions to Gearmand to enable exceptions by default
* Backtraces on some types of crashes.
* Add GEARMAN_CLIENT_GENERATE_UNIQUE.
* If the unique value passed to any client function is "#" then the unique value will be derived by hashing the workload that is being supplied to the function.
* Optimize status requests so that they exit as soon as request is received.
* Fix test case results for FreeBSD.

1.0.1 Tue Nov  6 01:07:07 EST 2012
* Stable branch labeled as 1.0
* Update all build related files.
* Add a few additional platforms to the supported list.

0.41 Fri Oct 12 05:34:29 EDT 2012
* Switched from --having-debug to --enable-debug
* Fix for SQLITE, it wasn't replaying its queue on startup.
* More testing done now on durable queues.

0.39 Wed Sep 19 03:36:06 EDT 2012
* Added gearman_job_error() interface.
* gearman_client_errno() and gearman_worker_errno() now return EINVAL if client or worker is invalid.

0.38 Fri Sep 14 02:16:01 EDT 2012
* Updates for compiling on different platforms.
* UUID portability fixes.

0.37 Sun Sep  2 22:51:08 EDT 2012
* Fix compiler issues around older compilers. Bug 1039629.

0.36 Sat Aug 18 16:57:13 EDT 2012
* Fix issue where sqlite was not correctly being shutdown.
* Check for more warnings (and cleanup found from).
* Fix thread safety issue for uuid_generate().

0.35 Sun Aug  5 16:03:21 EDT 2012
* Critical bug fix for rare case in which initialization of pipe for a worker fails.
* Add support for MySQL specific driver to specify port.
* Fix library issue with OSX Mountain Lion.

0.34 Tue Jul 10 21:19:10 EDT 2012
* Alpha support for direct MySQL queue.
* XML option for testing under valgrind.
* gearmand now allows for a user to specify the format for the server key
* First pass support for checking status via unique value.

0.33 Thu May  3 22:09:29 PDT 2012
* Add --config-file option