@@ -32,6 +32,7 @@ gearmand_gearmand_SOURCES+= configmake.h
 gearmand_gearmand_SOURCES+= gearmand/gearmand.cc
 gearmand_gearmand_SOURCES+= util/daemon.cc
 gearmand_gearmand_SOURCES+= util/pidfile.cc
+gearmand_gearmand_SOURCES+= libtest/cpu.cc
 
 gearmand_hostile_gearmand_CXXFLAGS=
 EXTRA_gearmand_hostile_gearmand_DEPENDENCIES=
